# server-templante

./: .env  .gitignore  Cargo.toml
configuration/: base.yaml  production.yaml
migrations/: 20241124220057_create_users_table.sql
scripts/: init_db.ps1  init_db.sh  init_redis.ps1  init_redis.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: email.rs  mod.rs  password.rs  user.rs
src/routes/: health_check.rs  mod.rs  webhooks.rs
