[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "{{project-name}}"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
actix-cors = "0.7.0"
actix-governor = "0.7.0"
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
thiserror = "2.0.3"
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.1"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.12"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }
futures-util = "0.3.31"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
num_cpus = "1.16.0"



[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.9" 
default-features = false
features = [
    "json", 
    "rustls-tls",
    "cookies",
]

[dev-dependencies]
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["macros", "rt"] }
wiremock = "0.6.2"
fake = "~2.3.0"
claims = "0.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
